--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Report</title>
     <link href="css/bootstrap.min.css"  rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stil.css" />
+    <link rel="stylesheet" type="text/css" href="css/stil.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body class="bg-secondary">
@@ -385,7 +385,7 @@
     </script>
     <script src="js/bootstrap.min.js">
     </script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
