--- a/index.html
+++ b/index.html
@@ -56,7 +56,58 @@
                     </ul>
                 </div>  
     </nav>
-
+    <nav class="navbar navbar-expand-lg bg-fark p-0">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon text-light fas fa-bars"></span>
+            </button>
+            <a href="#"> <img height="70px" src="img/logo.png" >   </a>       
+            <div class="btn-group d-flex justify-content-center pr-2" role="group">
+                <a href="index.html"> 
+                    <button type="button" class="btn btn-secondary mr-1 ml-1"><i class="fas fa-home"></i></button>
+                </a>
+                <button type="button" class="btn btn-secondary rounded" data-bs-toggle="modal" data-bs-target="#modalniProzor"><i class="far fa-comment-dots"></i></button>
+            
+                <div class="modal fade" id="modalniProzor" tabindex="-1" aria-labelledby="modalniProzor" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Ostavite vaš komentar</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <textarea name="" id="" class="form-control" cols="40" rows="8"></textarea>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default btn-close" data-bs-dismiss="modal">Pošaljite</button>
+                                <button type="button" class="btn btn-default btn-close" data-bs-dismiss="modal">Zatvori</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#">Hidden brand</a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </di
+        
+        v>
+      </nav>
     <div class="container container-md-fluid p-0 bg-secondary" style=" box-shadow: 0px 0px 20px black; background: url(img/novine2.jpg); background-size:100%; background-repeat: repeat-y;" >
         <p class="text-light vrati fixed-bottom p-2 bg-dark d-flex justify-content-center font-italic" style="opacity:0; margin-bottom: 0px;" onclick="vrati()"> &#8593 Vrati se na početak
         </p>
