--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </ul>
         </div>  
     </nav>
-    <nav class="navbar navbar-expand-md bg-fark p-0">
+    <nav class="navbar navbar-expand-md bg-dark p-0">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-light fas fa-bars"></span>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <div class="collapse navbar-collapse text-secondary" id="navbarTogglerDemo01">
             <a class="navbar-brand" href="#">Hidden brand</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
