--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>  
     </nav>
     <nav class="navbar navbar-expand-md bg-dark p-0">
-        <div class="container-fluid">
+        <div class="container-fluid bg-dark">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-light fas fa-bars"></span>
             </button>
