--- a/index.html
+++ b/index.html
@@ -66,44 +66,24 @@
                 <a href="index.html"> 
                     <button type="button" class="btn btn-secondary mr-1 ml-1"><i class="fas fa-home"></i></button>
                 </a>
-                <button type="button" class="btn btn-secondary rounded" data-bs-toggle="modal" data-bs-target="#modalniProzor"><i class="far fa-comment-dots"></i></button>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Launch demo modal
-                  </button>
-                  
-                  <!-- Modal -->
-                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <button type="button" class="btn btn-secondary rounded" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <i class="far fa-comment-dots"></i>
+                </button>
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <h5 class="modal-title" id="exampleModalLabel">Ostavite vaš komentar</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          ...
+                            <textarea name="" id="" class="form-control" cols="40" rows="8"></textarea>
                         </div>
                         <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                          <button type="button" class="btn btn-primary">Save changes</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zatvori</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Pošaljite</button>
                         </div>
                       </div>
-                    </div>
-                  </div>
-                <div class="modal fade" id="modalniProzor" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title" id="modalLabel">Ostavite vaš komentar</h4>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <textarea name="" id="" class="form-control" cols="40" rows="8"></textarea>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Pošaljite</button>
-                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Zatvori</button>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
