--- a/index.html
+++ b/index.html
@@ -88,22 +88,20 @@
                 </div>
             </div>
           <div class="collapse navbar-collapse text-secondary" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Hidden brand</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link rounded text-secondary d-flex justify-content-center px-1" href="najnovije.html"><h6 class="m-0 mr-1 d-inline"><em> <strong>Najnovije vesti </strong></em></h6><span class="badge badge-danger pb-md-1 m-0 ">NOVO!</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="najpopularnije1.html"><h6 class="m-0"> <em> <strong>Najpopularnije</strong></em></h6></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="horoskop.html"> <h6 class="m-0"><em> <strong>Horoskop</strong></em></h6></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="kontakt.html"> <h6 class="m-0"><em> <strong>Kontakt</strong></em></h6></a>
+                </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
