--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
           <div class="collapse navbar-collapse text-secondary" id="navbarTogglerDemo01">
             <ul class="navbar-nav p-0 m-0 indeks">
                 <li class="nav-item">
-                    <a class="nav-link rounded text-secondary d-flex justify-content-center px-1" href="najnovije.html"><h6 class="m-0 mr-1 d-inline"><em> <strong>Najnovije vesti </strong></em></h6><span class="badge badge-danger pb-md-1 m-0 ">NOVO!</span></a>
+                    <a class="nav-link rounded text-secondary d-flex justify-content-center px-1" href="najnovije.html"><h6 class="m-0 mr-1 d-inline"> <strong>Najnovije vesti </strong></h6><span class="badge badge-danger pb-md-1 m-0 ">NOVO!</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="najpopularnije1.html"><h6 class="m-0"> <em> <strong>Najpopularnije</strong></em></h6></a>
+                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="najpopularnije1.html"><h6 class="m-0">  <strong>Najpopularnije</strong></h6></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="horoskop.html"> <h6 class="m-0"><em> <strong>Horoskop</strong></em></h6></a>
+                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="horoskop.html"> <h6 class="m-0"> <strong>Horoskop</strong></h6></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="kontakt.html"> <h6 class="m-0"><em> <strong>Kontakt</strong></em></h6></a>
+                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="kontakt.html"> <h6 class="m-0"> <strong>Kontakt</strong></h6></a>
                 </li>
             </ul>
           </div>
