--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
     <nav class="navbar navbar-expand-md bg-dark p-0">
         <div class="container-fluid bg-dark">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon text-light fas fa-bars"></span>
+                <span class="navbar-toggler-icon text-light fas fa-bars"></span>
             </button>
-            <a href="#"> <img height="70px" src="img/logo.png" >   </a>       
+            <a href="#"><img height="70px" src=""></a>       
             <div class="btn-group d-flex justify-content-center pr-2" role="group">
-                <a href="index.html"> 
-                    <button type="button" class="btn btn-secondary mr-1 ml-1"><i class="fas fa-home"></i></button>
-                </a>
-                <button type="button" class="btn btn-secondary rounded" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    <i class="far fa-comment-dots"></i>
-                </button>
+                <a href="index.html"><button type="button" class="btn btn-secondary mr-1 ml-1"><i class="fas fa-home"></i></button></a>
+                <button type="button" class="btn btn-secondary rounded" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="far fa-comment-dots"></i></button>
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                       <div class="modal-content">
@@ -41,25 +37,25 @@
                     </div>
                 </div>
             </div>
-          <div class="collapse navbar-collapse text-secondary" id="navbarTogglerDemo01">
-            <ul class="navbar-nav p-0 m-0 indeks">
-                <li class="nav-item">
-                    <a class="nav-link rounded text-secondary d-flex justify-content-center px-1" href="najnovije.html"><h6 class="m-0 mr-1 d-inline"> <strong>Najnovije vesti </strong></h6><span class="badge badge-danger pb-md-1 m-0 ">NOVO!</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="najpopularnije1.html"><h6 class="m-0">  <strong>Najpopularnije</strong></h6></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="horoskop.html"> <h6 class="m-0"> <strong>Horoskop</strong></h6></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="kontakt.html"> <h6 class="m-0"> <strong>Kontakt</strong></h6></a>
-                </li>
-            </ul>
-          </div>
+            <div class="collapse navbar-collapse text-secondary" id="navbarTogglerDemo01">
+                <ul class="navbar-nav p-0 m-0 indeks">
+                    <li class="nav-item">
+                        <a class="nav-link rounded text-secondary d-flex justify-content-center px-1" href="najnovije.html"><h6 class="m-0 mr-1 d-inline"> <strong>Najnovije vesti </strong></h6><span class="badge bg-danger pb-md-1 m-0 ">NOVO!</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="najpopularnije1.html"><h6 class="m-0">  <strong>Najpopularnije</strong></h6></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="horoskop.html"> <h6 class="m-0"> <strong>Horoskop</strong></h6></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link rounded text-secondary  d-flex justify-content-center px-1" href="kontakt.html"> <h6 class="m-0"> <strong>Kontakt</strong></h6></a>
+                    </li>
+                </ul>
+            </div>
         </div>
       </nav>
-    <div class="container container-md-fluid p-0 bg-secondary" style=" box-shadow: 0px 0px 20px black; background: url(img/novine2.jpg); background-size:100%; background-repeat: repeat-y;" >
+    <div class="container-fluid p-0 bg-secondary" style=" box-shadow: 0px 0px 20px black; background: url(img/novine2.jpg); background-size:100%; background-repeat: repeat-y;" >
         <p class="text-light vrati fixed-bottom p-2 bg-dark d-flex justify-content-center font-italic" style="opacity:0; margin-bottom: 0px;" onclick="vrati()"> &#8593 Vrati se na početak
         </p>
         <div class="col-12 p-0 d-md-none d-lg-inline-block" >            
